Fix map hiding behind menu after clicking map menu item.

--- a/_includes/css/map.css
+++ b/_includes/css/map.css
@@ -1,21 +1,15 @@
 /* Map */
-.map {
-  height: 500px;
-}
-
 section#map {
-  padding: 0 0;
+  padding: 80px 0 0 0;
+  height: 75vh;
 }
 
 @media (max-width: 768px) {
-  .map {
-    height: 75%;
-  }
   section#map {
     padding: 0 0;
   }
 }
 
-.map iframe {
+section#map iframe {
   pointer-events: none;
 }
